# kyutai_transcription

./: .gitignore  CONNECTING_TO_TALK.md  Dockerfile  LIVE_TESTING.md  README.md  STRUCTURE.md  TESTABLE_CODING_PRINCIPLES.md  building-custom-caption-exapp.md  exapp-ui-integration.md  pyproject.toml  requirements.txt  research_on_talk_connection.md  tmp_signaling_capture.jsonl
.github/workflows/: docker-publish.yml
appinfo/: info.xml
ex_app/: __init__.py
ex_app/lib/: __init__.py  audio_stream.py  constants.py  livetypes.py  main.py  memory_watchdog.py  models.py  service.py  spreed_client.py  transcriber.py  utils.py
ex_app/lib/audio/: __init__.py  processing.py
ex_app/lib/protocols/: __init__.py  modal.py
ex_app/lib/transcription/: __init__.py  session.py
ex_app/lib/transport/: __init__.py  modal_client.py
live_testing/: js-notes.md  package-lock.json  package.json  talk_probe.py  talk_streamer.js  talk_streamer.py
openspec/: project.md
openspec/changes/investigate-headless-talk-signaling/: proposal.md  tasks.md
tests/: __init__.py  test_audio_processing.py  test_livetypes.py  test_modal_integration.py  test_models.py  test_protocols_modal.py  test_transcriber.py  test_transcription_session.py
tools/: roundtrip_modal.py  send_audio_bot.py  stream_audio_guest.py  stream_audio_to_talk.py
